# task-2

./: CMakeLists.txt
app/: CMakeLists.txt  main.c
app/src/: main.c
lib/: CMakeLists.txt  lib.def
lib/include/: hexdump.h
lib/src/: hexdump.c
